# scaling-octo-eureka

./: Data-Engineer_task.txt  Data_Engineer_Task.ipynb  README.md  pyproject.toml
results_json/: movies_per_genre.json  movies_per_year.json  top_5_movies.json
